# cortex-ai-powred-STEM-learning

./: .dockerignore  Dockerfile  README.md  supervisord.conf
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/routers/: chat.py  courses.py  diagrams.py  progress.py  quiz.py
backend/app/services/: conversation.py  diagram_service.py  embedder.py  handout_processor.py  llm_client.py  quiz_generator.py  tts_engine.py  vector_store.py
backend/tests/: test_conversation.py  test_database.py  test_handout_processor.py  test_llm_client.py  test_quiz_generator.py  test_tts_engine.py  test_vector_store.py
docs/plans/: 2026-02-24-openrouter-multi-model-design.md  2026-02-24-openrouter-multi-model-plan.md  2026-02-24-study-pal-design.md  2026-02-24-study-pal-implementation.md  2026-02-24-ui-overhaul-design.md  2026-02-24-ui-overhaul-plan.md
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/src/components/: AudioController.tsx  AudioPlayer.ts  ChatPanel.tsx  CourseView.tsx  Dashboard.tsx  DiagramPanel.tsx  NewCourse.tsx  QuizView.tsx  StudyView.tsx  VoiceInput.tsx
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts  websocket.ts
frontend/src/pages/: index.astro
frontend/src/pages/course/: [id].astro
frontend/src/pages/quiz/: [quizId].astro
frontend/src/pages/study/: [subtopicId].astro
frontend/src/styles/: global.css
nginx/: nginx-standalone.conf
